# cc-practices

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json  statusline.sh
.claude-plugin/: marketplace.json
.claude/rules/: core-principles.md  python-script-standards.md  rust-principles.md  skills-bash-script-standards.md  skills-python-script-standards.md  ts-principles.md
agent/: AGENTS.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
agent/IDENTITY/: IDENTITY.md
code-design-docs-spec/: SKILL.md
code-design-docs-spec/references/: arch-spec.md  prd-spec.md  test-spec.md
code-docs-spec/: SKILL.md
code-docs-spec/references/: architecture-spec.md  prd-spec.md  test-spec.md
code-principles/: SKILL.md
code-principles/references/: py-principles.md  rust-principles.md
code-simplifier/: SKILL.md
macos-screenshot/: SKILL.md
news/: SKILL.md
news/config/: sources.yaml
news/references/: fetch-strategy.md  output-template.md
obsidian-knowledge/: SKILL.md
obsidian-knowledge/references/: obsidian-cli.md
plugins/planning/: plugin.json
plugins/screenshot/: plugin.json
plugins/stock-analysis/: SKILL.md
react-best-practices/: SKILL.md
react-best-practices/rules/: _sections.md  test-aaa-pattern.md  test-avoid-implementation.md  test-factories.md  test-isolate.md  test-mock-external.md
rest-api-standards/: SKILL.md
rest-api-standards/rules/: 01-core-basics.md  07-security.md  (+4 more)
sample-project/: .env.example  .gitignore  README.md
search-and-fetch/: SKILL.md
stock-analysis/: SKILL.md
(+79 files in other folders)
